fix (client) : tag modal overflow

--- a/client/src/Styles/components/_modal.scss
+++ b/client/src/Styles/components/_modal.scss
@@ -128,6 +128,7 @@
         .tags 
         {
             width: 100%;
+            height: 400px;
             display: flex;
             flex-wrap: wrap;
             overflow: scroll;
